Dynamic 3 Issue 16 Implement Live System

--- a/WordBlast/index.html
+++ b/WordBlast/index.html
@@ -25,6 +25,9 @@
                 <div class="score-badge">
                     Score <span id="score">0</span>
                 </div>
+                <div class="score-badge">
+                    Lives <span id="lives">0</span>
+                </div>
                 <div class="score-badge high">
                     High <span id="high-score">0</span>
                 </div>
@@ -39,7 +42,8 @@
             </div>
         </div>
 
-        <canvas id="gameCanvas"></canvas>
+        <canvas id="gameCanvas" tabindex="0"></canvas>
+        <div id="type-feedback"></div>
     </div>
 
     <!-- Footer (Issue: Add Footer with Credits) -->
